@@ -6,6 +6,19 @@ class Addable(object):
         return {field: self._content.get(field, None) for field in self.ADDABLE_FIELDS}
 
 
+# class Closeable(object):
+#     """  """
+#     @property
+#     def close_params(self):
+#         """ Returns params necessary to close the subclass object in TestRail """
+#         return {field: self._content.get(field, None) for field in self.CLOSEABLE_FIELDS}
+
+
+class Deleteable(object):
+    """  """
+    pass
+
+
 class Updatable(object):
     """  """
     @property
